--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.129",
+    "@mui/material": "^5.12.3",
+    "@mui/system": "^5.12.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.9.3",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-typewriter-effect": "^1.1.0",
+    "react-use-measure": "^2.1.1",
+    "styled-components": "^5.3.6",
+    "@react-spring/web": "*",
+    "sass": "^1.62.1",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,6 +38,9 @@
       "react-app/jest"
     ]
   },
+  "eslintIgnore": [
+    "node_modules"
+  ], 
   "browserslist": {
     "production": [
       ">0.2%",
