--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
+  "homepage": "https://f20180445.github.io/portfolio-app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -24,9 +25,12 @@
     "@react-spring/web": "*",
     "sass": "^1.62.1",
     "tsparticles": "^2.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^6.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
