--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "homepage": "https://f20180445.github.io/portfolio-app",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
