--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.3",
     "@mui/system": "^5.12.3",
+    "@react-spring/web": "*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,12 +22,10 @@
     "react-scripts": "5.0.1",
     "react-typewriter-effect": "^1.1.0",
     "react-use-measure": "^2.1.1",
-    "styled-components": "^5.3.6",
-    "@react-spring/web": "*",
     "sass": "^1.62.1",
+    "styled-components": "^5.3.6",
     "tsparticles": "^2.9.3",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^6.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -44,7 +43,7 @@
   },
   "eslintIgnore": [
     "node_modules"
-  ], 
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -56,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
