--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "homepage": "https://f20180445.github.io/portfolio-app",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.129",
@@ -15,23 +19,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-particles": "^2.9.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-social-media-embed": "^2.3.6",
     "react-typewriter-effect": "^1.1.0",
     "react-use-measure": "^2.1.1",
     "sass": "^1.62.1",
     "styled-components": "^5.3.6",
     "tsparticles": "^2.9.3",
-    "web-vitals": "^2.1.4",
-    "@fortawesome/free-brands-svg-icons":"^6.4.2",
-    "@fortawesome/react-fontawesome":"^0.2.0",
-    "@fortawesome/fontawesome-svg-core":"^6.4.2",
-    "react-social-media-embed":"^2.3.6",
-    "@chakra-ui/react":"^2.8.1",
-    "framer-motion":"^10.16.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
